Make ::-webkit-scrollbar 0 width, fixes #255

--- a/bin/css/nanoscroller.less
+++ b/bin/css/nanoscroller.less
@@ -25,6 +25,7 @@
     }
     &::-webkit-scrollbar {
       visibility: hidden;
+      width: 0;
     }
   }
   > .@{paneClass} {
