--- a/bin/css/nanoscroller.scss
+++ b/bin/css/nanoscroller.scss
@@ -28,6 +28,7 @@ $contentClass: "nano-content";
 
         &::-webkit-scrollbar {
             visibility: hidden;
+            width: 0;
         }
     }
 
